--- a/public/main.css
+++ b/public/main.css
@@ -4939,20 +4939,6 @@ button:focus {
   .btn-badge .emoji {
     margin-right: 4px; }
 
-.btn-group .btn {
-  font-size: 0.75rem !important; }
-  .btn-group .btn:first-child {
-    border-top-left-radius: 16px;
-    border-bottom-left-radius: 16px; }
-  .btn-group .btn:last-child {
-    border-top-right-radius: 16px;
-    border-bottom-right-radius: 16px; }
-  .btn-group .btn:active {
-    color: var(--color-primary) !important; }
-
-.btn-group.lg .btn {
-  min-height: 40px; }
-
 .btn-sm, .btn-group-sm > .btn {
   border-radius: 6pt !important; }
 
@@ -5121,9 +5107,10 @@ button:focus {
   color: var(--color-primary); }
 
 .btn-group {
-  background-color: var(--color-solid-2);
-  padding: 2px;
-  border-radius: 1.2rem; }
+  background-color: var(--color-solid-1);
+  padding: 3px;
+  border-radius: 12px;
+  height: 40px; }
   .btn-group .btn {
     background: transparent !important;
     border: none;
@@ -5131,13 +5118,18 @@ button:focus {
     color: var(--color-inverse);
     flex-grow: 1;
     flex-shrink: 1;
-    padding-left: 6px !important;
-    padding-right: 6px !important; }
+    padding: 0 6px 0px !important;
+    line-height: 100%;
+    border-radius: 12px !important;
+    font-size: 0.8rem; }
     .btn-group .btn.active {
-      background-color: var(--color-solid) !important;
+      background-color: var(--color-primary-bright) !important;
+      color: #fff;
+      font-weight: 500;
       border-radius: 10px !important;
       box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.14);
-      border-radius: 1.2rem !important; }
+      border-radius: 11px !important;
+      font-size: 0.8rem; }
     .btn-group .btn i.zmdi {
       font-size: 1.4rem; }
   .btn-group.inverse {
@@ -5235,9 +5227,10 @@ body.pink {
 
 body {
   overflow: hidden;
+  --header-height: 56px;
   --color-darkest: #fff;
   --color-darkest-translucent: rgba(255, 255, 255, 0.89);
-  --color-bg: #eee;
+  --color-bg: rgba(250, 250, 250);
   --space-gap: 8pt;
   --color-input-background: rgba(0, 0, 0, 0.1);
   --tracker-background: #fff;
@@ -5279,11 +5272,11 @@ body {
   --color-grey-5: rgb(125, 125, 125);
   --color-grey-6: rgb(150, 150, 150);
   --color-grey-7: rgb(175, 175, 175);
-  --color-grey-8: rgb(200, 200, 200);
-  --color-grey-9: rgb(225, 225, 225);
+  --color-grey-8: rgb(225, 225, 225);
+  --color-grey-9: rgb(245, 245, 245);
   --color-grey-10: rgb(250, 250, 250);
   --box-shadow-tight: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
-  --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
+  --box-shadow: 0 7px 10px -4px rgba(0, 0, 0, 0.1), 0 8px 16px -4px rgba(0, 0, 0, 0.1), 0 -1px 2px rgba(0, 0, 0, 0.09);
   --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08), 0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.14);
   --box-shadow-neu: 4px 0px 8px rgba(0, 0, 0, 0.2), -4px 0px 8px rgba(255, 255, 255, 0.9);
   --box-shadow-neu-tight: 2px 2px 4px rgba(0, 0, 0, 0.2), -2px -2px 4px rgba(255, 255, 255, 0.9);
@@ -5292,9 +5285,9 @@ body {
   --modal-border: solid 1px rgba(0, 0, 0, 0.12);
   --header-fade: linear-gradient(
     180deg,
-    rgba(240, 240, 240, 1) 35%,
-    rgba(240, 240, 240, 0.5886729691876751) 76%,
-    rgba(240, 240, 240, 0) 100%
+    rgba(255, 255, 255, 1) 35%,
+    rgba(255, 255, 255, 0.5886729691876751) 76%,
+    rgba(255, 255, 255, 0) 100%
   );
   --footer-fade: linear-gradient(180deg, rgba(240, 240, 240, 0) 10%, rgba(240, 240, 240, 0.9) 30%, rgba(240, 240, 240, 1) 100%);
   --footer-background: rgba(254, 254, 254, 1); }
@@ -5315,6 +5308,9 @@ body {
     transition: all 0.2s ease-in-out;
     position: fixed;
     background-color: transparent; }
+
+.fill-header {
+  background-color: var(--color-grey-9); }
 
 .box-shadow-float {
   box-shadow: var(--box-shadow-float); }
@@ -5363,27 +5359,27 @@ body.offline .main-content:before {
   z-index: 2000; }
 
 body.theme-dark {
-  --header-fade: linear-gradient(180deg, rgba(0, 0, 0, 1) 35%, rgba(20, 20, 20, 0) 100%);
+  --header-fade: linear-gradient(180deg, rgba(0, 0, 0, 1) 35%, rgba(0, 0, 0, 0) 100%);
   --footer-background: rgba(10, 10, 10, 1);
   --footer-fade: linear-gradient(0deg, rgba(10, 10, 10, 1) 52%, rgba(10, 10, 10, 0.711922268907563) 72%, rgba(10, 10, 10, 0) 100%);
   --color-grey-10: rgb(5, 5, 5);
-  --color-grey-9: rgb(25, 25, 25);
-  --color-grey-8: rgb(50, 50, 50);
+  --color-grey-9: rgb(10, 10, 10);
+  --color-grey-8: rgb(20, 20, 20);
   --color-grey-7: rgb(75, 75, 75);
   --color-grey-6: rgb(100, 100, 100);
   --color-grey-5: rgb(125, 125, 125);
   --color-grey-4: rgb(150, 150, 150);
   --color-grey-3: rgb(175, 175, 175);
-  --color-grey-2: rgb(200, 200, 200);
-  --color-grey-1: rgb(225, 225, 225);
+  --color-grey-2: rgb(225, 225, 225);
+  --color-grey-1: rgb(245, 245, 245);
   --color-grey-0: rgb(250, 250, 250);
   --header-background: #111;
   --tabs-background: #111;
   --tracker-background: rgb(5, 5, 5);
   --color-darkest-translucent: rgba(0, 0, 0, 0.7);
   --color-darkest: #000;
-  --color-bg: rgb(5, 5, 5);
-  --color-solid: rgb(25, 25, 25);
+  --color-bg: rgb(14, 14, 14);
+  --color-solid: rgb(5, 5, 5);
   --color-solid-half: rgb(14, 9, 9);
   --color-solid-1: rgb(35, 35, 35);
   --color-solid-2: rgb(39, 39, 39);
@@ -5401,9 +5397,9 @@ body.theme-dark {
   --color-faded-3: rgba(255, 255, 255, 0.4);
   --color-full-screen: rgba(0, 0, 0, 0.7);
   --color-background-selected: rgba($primaryBright, 0.82);
-  --box-shadow: 0px 2px 2px rgba(255, 255, 255, 0.06), 0px 8px 10px rgba(0, 0, 0, 0.3);
-  --box-shadow-tight: 0px 2px 2px rgba(255, 255, 255, 0.06), 0px 4px 6px -1px rgba(0, 0, 0, 0.4);
-  --box-shadow-float: 0px 2px 2px rgba(255, 255, 255, 0.06), 0px 6px 10px -1px rgba(0, 0, 0, 0.1);
+  --box-shadow: 0px -2px 2px rgba(255, 255, 255, 0.06), 0px 8px 10px rgba(0, 0, 0, 0.3);
+  --box-shadow-tight: 0px -2px 2px rgba(255, 255, 255, 0.06), 0px 4px 6px -1px rgba(0, 0, 0, 0.4);
+  --box-shadow-float: 0px -2px 2px rgba(255, 255, 255, 0.06), 0px 6px 10px -1px rgba(0, 0, 0, 0.1);
   --box-shadow-neu: 4px 4px 8px rgba(255, 255, 255, 0.1), -4px -4px 8px rgba(0, 0, 0, 0.3);
   --box-shadow-neu-tight: 2px 2px 4px rgba(255, 255, 255, 0.1), -2px -2px 4px rgba(0, 0, 0, 0.3);
   --box-shadow-inset-huge: inset 0px 0px 60px rgba(0, 0, 0, 0.6);
@@ -5946,52 +5942,54 @@ button {
 
 .n-board-tabs {
   width: 100%;
-  min-height: 50px;
+  min-height: var(--header-height);
   -webkit-overflow-scrolling: touch;
   box-shadow: inset 3px 0px 4px rgba(0, 0, 0, 0);
   transition: all 0.2s ease-in-out;
-  background-color: var(--color-solid); }
+  background-color: var(--color-bg); }
   .n-board-tabs:not([data-scroll="0"]) {
-    box-shadow: inset 2px 0px 1px var(--color-faded) !important;
+    box-shadow: inset 2px 0px 1px rgba(100, 100, 100, 0.1) !important;
     z-index: 10; }
   .n-board-tabs .zmdi {
     color: var(--color-inverse-2);
     z-index: 10; }
   .n-board-tabs .tap-icon {
-    margin-top: 6px !important;
-    flex-grow: 1; }
+    margin-top: 6px !important; }
   .n-board-tabs .tab {
     color: var(--color-inverse-3);
     border: none;
     background: transparent;
-    padding: 6px 10px;
+    padding: 3px 10px;
     min-width: 45px;
     max-width: 120px;
     width: auto;
     flex-shrink: 0;
-    height: 40px;
-    margin-top: 10px;
+    height: 34px;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-grow: 0;
     text-align: center;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-    font-size: 0.9rem;
+    font-size: 0.85rem;
     transition: all 0.2s ease-in-out; }
     .n-board-tabs .tab.selected {
-      background-color: var(--color-bg);
-      color: var(--color-inverse); }
-      .n-board-tabs .tab.selected:before {
-        content: "";
-        position: absolute;
-        bottom: 45px;
+      position: relative !important;
+      background-color: var(--color-solid);
+      color: var(--color-inverse);
+      padding: 3px 18px;
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: var(--box-shadow-tight); }
+      .n-board-tabs .tab.selected:after {
+        content: "ddd";
+        position: absolute !important;
+        bottom: 0;
+        top: 0;
+        left: 0;
+        right: 0;
         z-index: 100;
-        height: 4px;
-        background-color: var(--color-solid);
-        background-color: red !important; }
+        background-color: var(--color-primary) !important; }
     .n-board-tabs .tab:last-child.active {
       border-bottom: none; }
     .n-board-tabs .tab:after {
@@ -6251,7 +6249,7 @@ body.scrolling .mini-map {
     width: calc(100% - 16px);
     margin: 8px;
     border-radius: 8px;
-    box-shadow: var(--box-shadow); }
+    box-shadow: var(--box-shadow-tight); }
     .n-item.solo .right .btn-clear, .n-item[solo] .right .btn-clear {
       margin-right: 0px !important; }
   .n-item select,
@@ -6266,7 +6264,7 @@ body.scrolling .mini-map {
     background-color: var(--color-bg); }
   .n-item[item-divider], .n-item.item-divider {
     font-weight: 600;
-    margin-top: 2px;
+    padding-top: 14px;
     color: var(--color-inverse-3) !important;
     text-transform: uppercase;
     letter-spacing: 0.04rem;
@@ -6295,11 +6293,20 @@ body.scrolling .mini-map {
     border-radius: 0.9rem;
     overflow: hidden;
     max-width: 95vw; }
+  .n-item.top-line:after, .n-item[top-line]:after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    border-top: solid 1px var(--color-solid-1) !important;
+    left: 16px;
+    right: 0; }
+  > .n-item.top-line:last-child:after, > .n-item[top-line]:last-child:after {
+    display: none; }
   .n-item.bottom-line:before, .n-item[bottom-line]:before {
     content: "";
     position: absolute;
     bottom: 0px;
-    border-bottom: solid 1px var(--color-faded-1) !important;
+    border-bottom: solid 1px var(--color-solid-1) !important;
     left: 16px;
     right: 0; }
   > .n-item.bottom-line:last-child:before, > .n-item[bottom-line]:last-child:before {
@@ -6384,6 +6391,10 @@ body.scrolling .mini-map {
     color: var(--color-primary); }
   .n-item.text-primary-bright .n-text {
     color: var(--color-primary-bright); }
+
+[item-divider] {
+  padding-top: 16px;
+  padding-bottom: 8px; }
 
 .n-item-divider {
   min-height: 60px !important;
@@ -6801,23 +6812,24 @@ aside.n-panel {
     border: none;
     padding: 0;
     background-color: var(--color-solid);
-    box-shadow: var(--box-shadow-float);
+    box-shadow: var(--box-shadow);
     display: flex;
     align-items: center;
     justify-content: center; }
-  .item-ball .username {
+  .item-ball .ball-label {
     font-weight: 400;
+    font-size: 0.8rem !important;
+    margin-top: 10px;
+    line-height: 1rem;
     width: 100%;
     text-align: center;
     text-overflow: ellipsis;
     overflow: hidden;
-    color: var(--color-inverse-1);
-    margin-top: 10px;
-    line-height: 1rem; }
+    color: var(--color-inverse-2) !important; }
   .item-ball:active {
     transform: scale(0.9); }
-    .item-ball:active .avatar {
-      box-shadow: var(--box-shadow-tight); }
+    .item-ball:active .avatar-ball {
+      box-shadow: var(--box-shadow-float); }
   .item-ball .last.today {
     color: var(--color-green); }
   @media (min-width: 980px) {
@@ -6861,7 +6873,7 @@ aside.n-panel {
       @media (min-width: 350px) {
         .item-ball.item-ball-small .avatar-ball {
           min-width: 100px; } }
-    .item-ball.item-ball-small .username {
+    .item-ball.item-ball-small .ball-label {
       margin-top: 6px;
       font-size: 80% !important; }
     .item-ball.item-ball-small .score {
@@ -6940,9 +6952,8 @@ aside.n-panel {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  padding: 0 6px 10px;
   justify-content: flex-start;
-  padding: 6px; }
+  padding: 0 6px; }
   .tracker-grid button {
     width: calc(50% - 1px);
     min-height: 70px; }
@@ -7007,14 +7018,15 @@ aside.n-panel {
 .n-item-log {
   width: calc(100% - 16px);
   margin: 16px 8px;
-  padding: 0px;
+  padding: 4px;
   border-radius: 16px;
   overflow: hidden;
   box-shadow: var(--box-shadow); }
+  @media (min-width: 600px) {
+    .n-item-log {
+      padding: 8px; } }
   .n-item-log .time-row {
-    padding: 8px 16px 16px;
-    border-bottom: solid 1px var(--color-solid-1);
-    margin-bottom: 2px; }
+    padding: 8px 16px 0px; }
   .n-item-log .main {
     padding-left: 0; }
   .n-item-log .context.n-row {
@@ -7198,6 +7210,9 @@ aside.n-panel {
   right: 0;
   z-index: 5000; }
 
+body.scrolled header.layout-header {
+  box-shadow: var(--box-shadow-float); }
+
 .n-layout {
   position: fixed;
   display: flex;
@@ -7206,19 +7221,13 @@ aside.n-panel {
   bottom: 0;
   left: 0;
   right: 0; }
-  .n-layout .layout-header-fade {
-    pointer-events: none;
-    background: var(--header-fade);
-    z-index: 3;
-    height: 70px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: -20px; }
+  .n-layout .layout-header header,
+  .n-layout .layout-header header .container {
+    min-height: var(--header-height); }
   .n-layout header.layout-header {
-    min-height: 50px;
-    flex-grow: 0;
+    background-color: var(--color-bg);
+    min-height: var(--header-height);
+    flex-grow: 1;
     flex-shrink: 0;
     z-index: 4; }
   .n-layout main.layout-main {
@@ -7227,15 +7236,10 @@ aside.n-panel {
     flex-grow: 1;
     flex-shrink: 1;
     height: 100%;
-    margin-top: -50px;
-    padding-top: 50px;
+    margin-top: calc(var(--header-height) * -1);
+    padding-top: var(--header-height);
     z-index: 1;
-    border-bottom: solid 1px var(--color-faded); }
-  .n-layout footer.layout-footer {
-    min-height: 50px;
-    flex-grow: 1;
-    flex-shrink: 0;
-    background-color: var(--footer-background) !important; }
+    border-bottom: solid 1px var(--color-grey-8); }
   .n-layout.no-tabs footer.layout-footer {
     padding-bottom: env(safe-area-inset-bottom); }
   .n-layout #nav-tabs {
