--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -44,9 +44,10 @@ body.pink {
 
 body {
   overflow: hidden;
+  --header-height: 56px;
   --color-darkest: #fff;
   --color-darkest-translucent: rgba(255, 255, 255, 0.89);
-  --color-bg: #eee;
+  --color-bg: rgba(250, 250, 250);
   --space-gap: #{$gap};
   --color-input-background: rgba(0, 0, 0, 0.1);
   --tracker-background: #fff;
@@ -90,12 +91,12 @@ body {
   --color-grey-5: rgb(125, 125, 125);
   --color-grey-6: rgb(150, 150, 150);
   --color-grey-7: rgb(175, 175, 175);
-  --color-grey-8: rgb(200, 200, 200);
-  --color-grey-9: rgb(225, 225, 225);
+  --color-grey-8: rgb(225, 225, 225);
+  --color-grey-9: rgb(245, 245, 245);
   --color-grey-10: rgb(250, 250, 250);
 
   --box-shadow-tight: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
-  --box-shadow: 0px 8px 18px -10px rgba(0, 0, 0, 0.2);
+  --box-shadow: 0 7px 10px -4px rgba(0, 0, 0, 0.1), 0 8px 16px -4px rgba(0, 0, 0, 0.1), 0 -1px 2px rgba(0, 0, 0, 0.09);
   --box-shadow-float: 0 4px 8px rgba(0, 0, 0, 0.08), 0 2px 4px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.14);
   --box-shadow-neu: 4px 0px 8px rgba(0, 0, 0, 0.2), -4px 0px 8px rgba(255, 255, 255, 0.9);
   --box-shadow-neu-tight: 2px 2px 4px rgba(0, 0, 0, 0.2), -2px -2px 4px rgba(255, 255, 255, 0.9);
@@ -105,9 +106,9 @@ body {
   --modal-border: solid 1px rgba(0, 0, 0, 0.12);
   --header-fade: linear-gradient(
     180deg,
-    rgba(240, 240, 240, 1) 35%,
-    rgba(240, 240, 240, 0.5886729691876751) 76%,
-    rgba(240, 240, 240, 0) 100%
+    rgba(255, 255, 255, 1) 35%,
+    rgba(255, 255, 255, 0.5886729691876751) 76%,
+    rgba(255, 255, 255, 0) 100%
   );
 
   --footer-fade: linear-gradient(180deg, rgba(240, 240, 240, 0) 10%, rgba(240, 240, 240, 0.9) 30%, rgba(240, 240, 240, 1) 100%);
@@ -125,20 +126,20 @@ body.test {
 }
 
 @mixin darkmode {
-  --header-fade: linear-gradient(180deg, rgba(0, 0, 0, 1) 35%, rgba(20, 20, 20, 0) 100%);
+  --header-fade: linear-gradient(180deg, rgba(0, 0, 0, 1) 35%, rgba(0, 0, 0, 0) 100%);
   --footer-background: rgba(10, 10, 10, 1);
   --footer-fade: linear-gradient(0deg, rgba(10, 10, 10, 1) 52%, rgba(10, 10, 10, 0.711922268907563) 72%, rgba(10, 10, 10, 0) 100%);
 
   --color-grey-10: rgb(5, 5, 5);
-  --color-grey-9: rgb(25, 25, 25);
-  --color-grey-8: rgb(50, 50, 50);
+  --color-grey-9: rgb(10, 10, 10);
+  --color-grey-8: rgb(20, 20, 20);
   --color-grey-7: rgb(75, 75, 75);
   --color-grey-6: rgb(100, 100, 100);
   --color-grey-5: rgb(125, 125, 125);
   --color-grey-4: rgb(150, 150, 150);
   --color-grey-3: rgb(175, 175, 175);
-  --color-grey-2: rgb(200, 200, 200);
-  --color-grey-1: rgb(225, 225, 225);
+  --color-grey-2: rgb(225, 225, 225);
+  --color-grey-1: rgb(245, 245, 245);
   --color-grey-0: rgb(250, 250, 250);
 
   --header-background: #111;
@@ -146,8 +147,8 @@ body.test {
   --tracker-background: rgb(5, 5, 5);
   --color-darkest-translucent: rgba(0, 0, 0, 0.7);
   --color-darkest: #000;
-  --color-bg: rgb(5, 5, 5);
-  --color-solid: rgb(25, 25, 25);
+  --color-bg: rgb(14, 14, 14);
+  --color-solid: rgb(5, 5, 5);
   --color-solid-half: rgb(14, 9, 9);
   --color-solid-1: rgb(35, 35, 35);
   --color-solid-2: rgb(39, 39, 39);
@@ -165,9 +166,9 @@ body.test {
   --color-faded-3: rgba(255, 255, 255, 0.4);
   --color-full-screen: rgba(0, 0, 0, 0.7);
   --color-background-selected: rgba($primaryBright, 0.82);
-  --box-shadow: 0px 2px 2px rgba(255, 255, 255, 0.06), 0px 8px 10px rgba(0, 0, 0, 0.3);
-  --box-shadow-tight: 0px 2px 2px rgba(255, 255, 255, 0.06), 0px 4px 6px -1px rgba(0, 0, 0, 0.4);
-  --box-shadow-float: 0px 2px 2px rgba(255, 255, 255, 0.06), 0px 6px 10px -1px rgba(0, 0, 0, 0.1);
+  --box-shadow: 0px -2px 2px rgba(255, 255, 255, 0.06), 0px 8px 10px rgba(0, 0, 0, 0.3);
+  --box-shadow-tight: 0px -2px 2px rgba(255, 255, 255, 0.06), 0px 4px 6px -1px rgba(0, 0, 0, 0.4);
+  --box-shadow-float: 0px -2px 2px rgba(255, 255, 255, 0.06), 0px 6px 10px -1px rgba(0, 0, 0, 0.1);
 
   --box-shadow-neu: 4px 4px 8px rgba(255, 255, 255, 0.1), -4px -4px 8px rgba(0, 0, 0, 0.3);
   --box-shadow-neu-tight: 2px 2px 4px rgba(255, 255, 255, 0.1), -2px -2px 4px rgba(0, 0, 0, 0.3);
@@ -200,6 +201,10 @@ body {
       background-color: transparent;
     }
   }
+}
+
+.fill-header {
+  background-color: var(--color-grey-9);
 }
 
 .box-shadow-float {
