--- a/src/scss/components/_n-layout.scss
+++ b/src/scss/components/_n-layout.scss
@@ -1,3 +1,9 @@
+body.scrolled {
+  header.layout-header {
+    box-shadow: var(--box-shadow-float);
+  }
+}
+
 .n-layout {
   position: fixed;
   display: flex;
@@ -7,21 +13,27 @@
   left: 0;
   right: 0;
 
-  .layout-header-fade {
-    pointer-events: none;
-    background: var(--header-fade);
-    z-index: 3;
-    height: 70px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: -20px;
+  // .layout-header-fade {
+  //   pointer-events: none;
+  //   background: var(--header-fade);
+  //   z-index: 3;
+  //   height: 70px;
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+  //   left: 0;
+  //   bottom: -20px;
+  // }
+
+  .layout-header header,
+  .layout-header header .container {
+    min-height: var(--header-height);
   }
 
   header.layout-header {
-    min-height: 50px;
-    flex-grow: 0;
+    background-color: var(--color-bg);
+    min-height: var(--header-height);
+    flex-grow: 1;
     flex-shrink: 0;
     z-index: 4;
   }
@@ -31,17 +43,12 @@
     flex-grow: 1;
     flex-shrink: 1;
     height: 100%;
-    margin-top: -50px;
-    padding-top: 50px;
+    margin-top: calc(var(--header-height) * -1);
+    padding-top: var(--header-height);
     z-index: 1;
-    border-bottom: solid 1px var(--color-faded);
+    border-bottom: solid 1px var(--color-grey-8);
   }
-  footer.layout-footer {
-    min-height: 50px;
-    flex-grow: 1;
-    flex-shrink: 0;
-    background-color: var(--footer-background) !important;
-  }
+
   &.no-tabs {
     footer.layout-footer {
       padding-bottom: env(safe-area-inset-bottom);
