--- a/public/main.css
+++ b/public/main.css
@@ -5120,8 +5120,11 @@ button:focus {
     flex-shrink: 1;
     padding: 0 6px 0px !important;
     line-height: 100%;
+    box-shadow: none;
     border-radius: 12px !important;
     font-size: 0.8rem; }
+    .btn-group .btn:focus {
+      box-shadow: none !important; }
     .btn-group .btn.active {
       background-color: var(--color-primary-bright) !important;
       color: #fff;
@@ -5129,7 +5132,9 @@ button:focus {
       border-radius: 10px !important;
       box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.14);
       border-radius: 11px !important;
-      font-size: 0.8rem; }
+      font-size: 0.8rem;
+      border: none;
+      outline: none !important; }
     .btn-group .btn i.zmdi {
       font-size: 1.4rem; }
   .btn-group.inverse {
@@ -5953,8 +5958,6 @@ button {
   .n-board-tabs .zmdi {
     color: var(--color-inverse-2);
     z-index: 10; }
-  .n-board-tabs .tap-icon {
-    margin-top: 6px !important; }
   .n-board-tabs .tab {
     color: var(--color-inverse-3);
     border: none;
