--- a/src/scss/pages/_setup.scss
+++ b/src/scss/pages/_setup.scss
@@ -1,5 +1,5 @@
 .page-setup {
-  background-color: var(--color-solid) !important;
+  background-color: var(--color-bg) !important;
   .setup-main {
     flex-grow: 1;
     flex-shrink: 1;
