--- a/public/main.css
+++ b/public/main.css
@@ -4876,7 +4876,7 @@ button:focus {
   outline: 0 !important; }
 
 .btn:focus, .btn.focus {
-  box-shadow: inherit; }
+  box-shadow: inherit !important; }
 
 .btn-row {
   display: flex;
@@ -5044,12 +5044,12 @@ button:focus {
       align-items: center;
       justify-content: center;
       color: #fff;
-      top: -12px;
-      left: -12px;
-      width: 24px;
-      height: 24px;
+      top: 8px;
+      left: 8px;
+      width: 32px;
+      height: 32px;
       background-color: var(--color-solid);
-      border-radius: 12px;
+      border-radius: 16px;
       box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
       color: #fff;
       content: "✓";
@@ -6892,6 +6892,22 @@ aside.n-panel {
 .n-toolbar-grid .btn {
   color: var(--color-inverse-1); }
 
+.n-toolbar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  height: 50px;
+  padding: 0 0px; }
+  .n-toolbar .left,
+  .n-toolbar .right {
+    min-width: 25%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center; }
+
 .n-toolbar-grid {
   color: var(--color-inverse);
   display: grid;
@@ -7357,7 +7373,7 @@ body.scrolled header.layout-header {
       opacity: 0; }
 
 .page-setup {
-  background-color: var(--color-solid) !important; }
+  background-color: var(--color-bg) !important; }
   .page-setup .setup-main {
     flex-grow: 1;
     flex-shrink: 1;
