--- a/public/main.css
+++ b/public/main.css
@@ -5061,7 +5061,10 @@ button:focus {
   font-size: 26px !important;
   padding-left: 10px;
   padding-right: 10px;
-  outline: 0 !important; }
+  border-radius: 50px;
+  outline: 0 !important;
+  flex-grow: 0;
+  flex-shrink: 0; }
 
 .btn-primary {
   background-color: var(--color-primary-bright); }
@@ -5107,7 +5110,7 @@ button:focus {
   color: var(--color-primary); }
 
 .btn-group {
-  background-color: var(--color-solid-1);
+  background-color: var(--color-solid-2);
   padding: 3px;
   border-radius: 12px;
   height: 40px; }
@@ -5151,6 +5154,9 @@ button:focus {
   color: var(--color-inverse-1); }
   .btn-clear[disabled] {
     opacity: 0.5; }
+
+.btn-transparent {
+  background-color: none; }
 
 .btn-square {
   border-radius: 0 !important; }
@@ -5235,7 +5241,7 @@ body {
   --header-height: 56px;
   --color-darkest: #fff;
   --color-darkest-translucent: rgba(255, 255, 255, 0.89);
-  --color-bg: rgba(250, 250, 250);
+  --color-bg: rgba(240, 240, 240);
   --space-gap: 8pt;
   --color-input-background: rgba(0, 0, 0, 0.1);
   --tracker-background: #fff;
@@ -5267,6 +5273,7 @@ body {
   --color-full-screen: rgba(0, 0, 0, 0.7);
   --color-background-selected: rgba(32, 105, 157, 0.1);
   --color-translucent: rgba(255, 255, 255, 0.89);
+  --color-translucent-inverse: rgba(0, 0, 0, 0.79);
   --input-background: #eee;
   --input-focus-background: #fff;
   --color-grey-0: rgb(5, 5, 5);
@@ -5275,9 +5282,9 @@ body {
   --color-grey-3: rgb(75, 75, 75);
   --color-grey-4: rgb(100, 100, 100);
   --color-grey-5: rgb(125, 125, 125);
-  --color-grey-6: rgb(150, 150, 150);
-  --color-grey-7: rgb(175, 175, 175);
-  --color-grey-8: rgb(225, 225, 225);
+  --color-grey-6: rgb(220, 220, 220);
+  --color-grey-7: rgb(230, 230, 230);
+  --color-grey-8: rgb(240, 240, 240);
   --color-grey-9: rgb(245, 245, 245);
   --color-grey-10: rgb(250, 250, 250);
   --box-shadow-tight: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
@@ -5370,9 +5377,9 @@ body.theme-dark {
   --color-grey-10: rgb(5, 5, 5);
   --color-grey-9: rgb(10, 10, 10);
   --color-grey-8: rgb(20, 20, 20);
-  --color-grey-7: rgb(75, 75, 75);
-  --color-grey-6: rgb(100, 100, 100);
-  --color-grey-5: rgb(125, 125, 125);
+  --color-grey-7: rgb(50, 50, 50);
+  --color-grey-6: rgb(75, 75, 75);
+  --color-grey-5: rgb(100, 100, 100);
   --color-grey-4: rgb(150, 150, 150);
   --color-grey-3: rgb(175, 175, 175);
   --color-grey-2: rgb(225, 225, 225);
@@ -5411,7 +5418,8 @@ body.theme-dark {
   --modal-border: solid 1px rgba(255, 255, 255, 0.08);
   --input-background: #111;
   --input-focus-background: #000;
-  --color-translucent: rgba(0, 0, 0, 0.79); }
+  --color-translucent: rgba(0, 0, 0, 0.79);
+  --color-translucent-inverse: rgba(255, 255, 255, 0.79); }
 
 .truncate {
   display: -webkit-box;
@@ -5527,7 +5535,7 @@ body.theme-dark {
   color: var(--color-inverse-3) !important; }
 
 .text-white {
-  color: #fff; }
+  color: #fff !important; }
 
 .font-bold {
   font-weight: bold; }
@@ -5880,30 +5888,6 @@ select {
   position: relative;
   cursor: pointer;
   touch-action: manipulation; }
-  .clickable:after,
-  [clickable]:after {
-    transition: all 0.1s ease-in-out;
-    content: "";
-    pointer-events: none;
-    background-color: var(--color-primary-bright);
-    opacity: 0;
-    position: absolute;
-    top: -10px;
-    bottom: -10px;
-    right: -10px;
-    left: -10px;
-    border-radius: 20px;
-    transform: scale(0.6); }
-
-.clickable:active {
-  touch-action: manipulation;
-  outline: none;
-  overflow: hidden; }
-  .clickable:active:after {
-    content: "";
-    position: absolute;
-    transform: scale(1);
-    opacity: 0.2; }
 
 .container-sm {
   max-width: 800px;
@@ -6412,6 +6396,7 @@ body.scrolling .mini-map {
     padding-bottom: 0; }
 
 .n-list {
+  background-color: var(--color-solid);
   margin-bottom: 16px;
   overflow: hidden; }
   .n-list.solo,
@@ -7248,7 +7233,8 @@ body.scrolled header.layout-header {
     min-height: var(--header-height);
     flex-grow: 1;
     flex-shrink: 0;
-    z-index: 4; }
+    z-index: 4;
+    transition: all 0.2s ease-in-out; }
   .n-layout main.layout-main {
     -webkit-overflow-scrolling: touch;
     overflow-y: auto;
@@ -7258,7 +7244,7 @@ body.scrolled header.layout-header {
     margin-top: calc(var(--header-height) * -1);
     padding-top: var(--header-height);
     z-index: 1;
-    border-bottom: solid 1px var(--color-grey-8); }
+    border-bottom: solid 1px var(--color-grey-7); }
   .n-layout.no-tabs footer.layout-footer {
     padding-bottom: env(safe-area-inset-bottom); }
   .n-layout #nav-tabs {
@@ -7472,6 +7458,18 @@ TODO: Organize main into components or containers.
 
 .gap {
   height: 16px; }
+
+hr.divider {
+  margin: 0;
+  padding: 0;
+  border: none;
+  border-top: solid 1px var(--color-grey-7);
+  border-bottom: none; }
+  hr.divider.center {
+    margin-left: 24px !important;
+    margin-right: 24px !important; }
+  hr.divider.indent {
+    margin-left: 20px; }
 
 .board-actions .btn-group {
   flex-grow: 0;
