--- a/src/scss/base/_clickable.scss
+++ b/src/scss/base/_clickable.scss
@@ -4,31 +4,31 @@
   position: relative;
   cursor: pointer;
   touch-action: manipulation;
-  &:after {
-    transition: all 0.1s ease-in-out;
-    content: "";
-    pointer-events: none;
-    // background-color: var(--color-inverse-3);
-    background-color: var(--color-primary-bright);
-    opacity: 0;
-    position: absolute;
-    top: -10px;
-    bottom: -10px;
-    right: -10px;
-    left: -10px;
-    border-radius: 20px;
-    transform: scale(0.6);
-    // border-radius: 8pt;
-  }
+  // &:after {
+  //   transition: all 0.1s ease-in-out;
+  //   content: "";
+  //   pointer-events: none;
+  //   // background-color: var(--color-inverse-3);
+  //   background-color: var(--color-primary-bright);
+  //   opacity: 0;
+  //   position: absolute;
+  //   top: -10px;
+  //   bottom: -10px;
+  //   right: -10px;
+  //   left: -10px;
+  //   border-radius: 20px;
+  //   transform: scale(0.6);
+  //   // border-radius: 8pt;
+  // }
 }
-.clickable:active {
-  touch-action: manipulation;
-  outline: none;
-  overflow: hidden;
-  &:after {
-    content: "";
-    position: absolute;
-    transform: scale(1);
-    opacity: 0.2;
-  }
-}
+// .clickable:active {
+//   touch-action: manipulation;
+//   outline: none;
+//   overflow: hidden;
+//   // &:after {
+//   //   content: "";
+//   //   position: absolute;
+//   //   transform: scale(1);
+//   //   opacity: 0.2;
+//   // }
+// }
