--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -47,7 +47,7 @@ body {
   --header-height: 56px;
   --color-darkest: #fff;
   --color-darkest-translucent: rgba(255, 255, 255, 0.89);
-  --color-bg: rgba(250, 250, 250);
+  --color-bg: rgba(240, 240, 240);
   --space-gap: #{$gap};
   --color-input-background: rgba(0, 0, 0, 0.1);
   --tracker-background: #fff;
@@ -79,6 +79,7 @@ body {
   --color-full-screen: rgba(0, 0, 0, 0.7);
   --color-background-selected: #{rgba($primary, 0.1)};
   --color-translucent: rgba(255, 255, 255, 0.89);
+  --color-translucent-inverse: rgba(0, 0, 0, 0.79);
 
   --input-background: #eee;
   --input-focus-background: #fff;
@@ -89,9 +90,9 @@ body {
   --color-grey-3: rgb(75, 75, 75);
   --color-grey-4: rgb(100, 100, 100);
   --color-grey-5: rgb(125, 125, 125);
-  --color-grey-6: rgb(150, 150, 150);
-  --color-grey-7: rgb(175, 175, 175);
-  --color-grey-8: rgb(225, 225, 225);
+  --color-grey-6: rgb(220, 220, 220);
+  --color-grey-7: rgb(230, 230, 230);
+  --color-grey-8: rgb(240, 240, 240);
   --color-grey-9: rgb(245, 245, 245);
   --color-grey-10: rgb(250, 250, 250);
 
@@ -133,9 +134,9 @@ body.test {
   --color-grey-10: rgb(5, 5, 5);
   --color-grey-9: rgb(10, 10, 10);
   --color-grey-8: rgb(20, 20, 20);
-  --color-grey-7: rgb(75, 75, 75);
-  --color-grey-6: rgb(100, 100, 100);
-  --color-grey-5: rgb(125, 125, 125);
+  --color-grey-7: rgb(50, 50, 50);
+  --color-grey-6: rgb(75, 75, 75);
+  --color-grey-5: rgb(100, 100, 100);
   --color-grey-4: rgb(150, 150, 150);
   --color-grey-3: rgb(175, 175, 175);
   --color-grey-2: rgb(225, 225, 225);
@@ -179,6 +180,7 @@ body.test {
   --input-focus-background: #000;
 
   --color-translucent: rgba(0, 0, 0, 0.79);
+  --color-translucent-inverse: rgba(255, 255, 255, 0.79);
 
   .btn-light {
     // @include button-variant(#333, darken(#333, 5%), darken(#333, 5%), darken(#333, 5%), rgba($primaryBright, 5%));
