--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -102,7 +102,7 @@
   color: var(--color-inverse-3) !important;
 }
 .text-white {
-  color: #fff;
+  color: #fff !important;
 }
 .font-bold {
   font-weight: bold;
