--- a/src/scss/components/_list-item.scss
+++ b/src/scss/components/_list-item.scss
@@ -15,7 +15,7 @@
     margin: 6px 8px;
     background-color: var(--color-faded);
     .n-item {
-      background-color: transparent;
+      // background-color: transparent;
       &.active {
         font-weight: bold !important;
         border-bottom: solid 1px var(--color-primary-bright);
@@ -339,6 +339,9 @@
     overflow: hidden;
     background-color: var(--color-solid);
     padding: 0px 0;
+    @include media-breakpoint-up(md) {
+      padding: 16px !important;
+    }
   }
 
   &.framed {
@@ -349,6 +352,7 @@
   @include media-breakpoint-up(sm) {
     border-radius: 6px;
   }
+
   overflow: hidden;
   .n-item:first-child {
     // border-top-left-radius: 6px;
