--- a/src/scss/components/_n-log-item.scss
+++ b/src/scss/components/_n-log-item.scss
@@ -112,9 +112,9 @@
     font-size: 1.1rem;
     line-height: 136%;
 
-    &.long-note {
-      font-size: 0.97rem;
-    }
+    // &.long-note {
+    //   font-size: 0.97rem;
+    // }
   }
 
   .trackers-list {
