--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -63,10 +63,12 @@ TODO: Organize main into components or containers.
 **/
 
 .location-badge {
-  padding: 2px 4px !important;
+  cursor: pointer;
+  padding: 2px 0px !important;
   max-width: 100px;
   text-transform: capitalize !important;
   border: none;
+  margin-right: 4px;
   color: var(--color-primary-bright);
   @include media-breakpoint-up(md) {
     max-width: 120px;
