style: people tab styling

--- a/src/scss/components/_n-layout.scss
+++ b/src/scss/components/_n-layout.scss
@@ -1,7 +1,5 @@
-body.scrolled {
-  header.layout-header {
-    box-shadow: var(--box-shadow-float);
-  }
+header.layout-header.scrolled {
+  box-shadow: var(--box-shadow-float);
 }
 
 .n-layout {
