--- a/public/main.css
+++ b/public/main.css
@@ -7306,8 +7306,9 @@ header.layout-header.scrolled {
   overflow: hidden;
   padding: 0;
   display: flex;
-  margin-bottom: 6px;
-  margin-left: 6px; }
+  margin-bottom: 5px;
+  margin-left: 6px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1); }
   .capture-log .more-button.active {
     background-color: var(--color-primary) !important;
     color: #fff; }
