--- a/src/scss/components/_capture-log.scss
+++ b/src/scss/components/_capture-log.scss
@@ -53,8 +53,9 @@
     overflow: hidden;
     padding: 0;
     display: flex;
-    margin-bottom: 6px;
+    margin-bottom: 5px;
     margin-left: 6px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
     &.active {
       background-color: var(--color-primary) !important;
       color: #fff;
