style: general improvements

--- a/src/scss/components/_share-image.scss
+++ b/src/scss/components/_share-image.scss
@@ -1,5 +1,5 @@
 .share-image-component {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: var(--color-full-screen);
   position: fixed;
   top: 0;
   bottom: 0;
