--- a/public/main.css
+++ b/public/main.css
@@ -5333,6 +5333,15 @@ body {
     position: fixed;
     background-color: transparent; }
 
+.hider {
+  height: 0;
+  width: 0;
+  overflow: hidden;
+  opacity: 0;
+  position: fixed;
+  bottom: -10px;
+  right: -20px; }
+
 .fill-header {
   background-color: var(--color-grey-9); }
 
@@ -6106,12 +6115,24 @@ body.scrolling .mini-map {
   justify-content: center;
   padding: 0; }
 
+.content-map {
+  height: 40vh;
+  width: 100vw;
+  position: relative; }
+  .content-map .btn {
+    position: absolute;
+    z-index: 2000;
+    bottom: 16px;
+    right: 50%;
+    margin-right: -25px; }
+
 .mini-map {
   position: fixed;
-  bottom: 70px;
+  z-index: 1000;
+  bottom: 90px;
   right: 26px;
-  height: 100px;
-  width: 100px;
+  height: 80px;
+  width: 80px;
   transition: all 0.2s ease-in-out;
   border-radius: 20px;
   box-shadow: var(--box-shadow-float);
@@ -6141,22 +6162,19 @@ body.scrolling .mini-map {
     right: 0;
     bottom: 0; }
   .mini-map.opened {
+    position: relative;
     transition: all 0.2s ease-in-out;
     display: flex;
     justify-content: center;
     align-items: center;
     color: var(--color-inverse);
-    height: 50%;
+    height: 45vh;
     min-height: 250;
     max-height: 700px;
-    border-radius: 25px;
+    border-radius: 0;
     z-index: 2000;
-    left: 16px;
-    right: 16px;
-    width: calc(100% - 32px);
-    bottom: 80px;
-    border: solid 1px var(--color-faded-2);
-    box-shadow: 0px 4px 20px -2px rgba(0, 0, 0, 0.4); }
+    width: 100vw;
+    border: solid 1px var(--color-faded-2); }
     .mini-map.opened .zmdi {
       font-size: 1.4rem; }
     .mini-map.opened .btn {
