--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -217,6 +217,16 @@ body {
   }
 }
 
+.hider {
+  height: 0;
+  width: 0;
+  overflow: hidden;
+  opacity: 0;
+  position: fixed;
+  bottom: -10px;
+  right: -20px;
+}
+
 .fill-header {
   background-color: var(--color-grey-9);
 }
