feat: new heroicon set

--- a/public/main.css
+++ b/public/main.css
@@ -4906,9 +4906,6 @@ button:focus {
     width: 20px !important;
     height: 20px !important; }
 
-.btn:hover {
-  color: inherit; }
-
 .btn-badge {
   font-size: 0.8rem;
   padding: 3pt 6pt 3pt 6pt;
@@ -5491,15 +5488,6 @@ body.theme-dark {
 .bg-solid {
   background-color: var(--color-solid); }
 
-.fill-primary-bright {
-  fill: var(--color-primary-bright) !important; }
-
-.fill-green {
-  fill: var(--color-green) !important; }
-
-.fill-red {
-  fill: var(--color-red) !important; }
-
 .bg-red {
   background-color: var(--color-red) !important; }
 
@@ -5511,18 +5499,6 @@ body.theme-dark {
 
 .bg-orange {
   background-color: var(--color-orange) !important; }
-
-.fill-inverse {
-  fill: var(--color-inverse) !important; }
-
-.fill-inverse-1 {
-  fill: var(--color-inverse-1) !important; }
-
-.fill-inverse-2 {
-  fill: var(--color-inverse-2) !important; }
-
-.fill-primary {
-  fill: var(--color-primary) !important; }
 
 .bg-solid-1 {
   background-color: var(--color-solid-1); }
@@ -5570,21 +5546,6 @@ body.theme-dark {
 .font-140 {
   font-size: 1.4rem; }
 
-.fill-faded {
-  fill: var(--color-faded) !important; }
-
-.fill-faded-1 {
-  fill: var(--color-faded-1) !important; }
-
-.fill-white {
-  fill: #fff !important; }
-
-.fill-faded-2 {
-  fill: var(--color-faded-2) !important; }
-
-.fill-faded-3 {
-  fill: var(--color-faded-3) !important; }
-
 .text-faded {
   color: var(--color-faded) !important; }
 
@@ -5617,6 +5578,42 @@ body.theme-dark {
 
 .text-xxl {
   font-size: 2.3rem !important; }
+
+.fill-faded {
+  stroke: var(--color-faded) !important; }
+
+.fill-faded-1 {
+  stroke: var(--color-faded-1) !important; }
+
+.fill-white {
+  stroke: #fff !important; }
+
+.fill-faded-2 {
+  stroke: var(--color-faded-2) !important; }
+
+.fill-faded-3 {
+  stroke: var(--color-faded-3) !important; }
+
+.fill-primary-bright {
+  stroke: var(--color-primary-bright) !important; }
+
+.fill-green {
+  stroke: var(--color-green) !important; }
+
+.fill-red {
+  stroke: var(--color-red) !important; }
+
+.fill-inverse {
+  stroke: var(--color-inverse) !important; }
+
+.fill-inverse-1 {
+  stroke: var(--color-inverse-1) !important; }
+
+.fill-inverse-2 {
+  stroke: var(--color-inverse-2) !important; }
+
+.fill-primary {
+  stroke: var(--color-primary) !important; }
 
 input[type="text"],
 input[type="email"],
@@ -7220,15 +7217,13 @@ aside.n-panel {
   z-index: 10;
   position: relative;
   font-size: 1.6rem !important;
-  color: var(--color-primary-bright);
-  fill: var(--color-primary-bright) !important; }
+  color: var(--color-primary-bright); }
   .tap-icon.sm {
     font-size: 1.5rem !important; }
-  .tap-icon svg {
-    height: 32px;
-    width: 32px; }
   .tap-icon:focus, .tap-icon:active {
     transform: scale(0.9) !important; }
+  .tap-icon:hover {
+    color: var(--color-primary-bright); }
 
 .tap-text {
   font-weight: 500 !important;
