--- a/src/scss/components/_tap-icon-text.scss
+++ b/src/scss/components/_tap-icon-text.scss
@@ -4,17 +4,16 @@
   position: relative;
   font-size: 1.6rem !important;
   color: var(--color-primary-bright);
-  fill: var(--color-primary-bright) !important;
   &.sm {
     font-size: 1.5rem !important;
   }
-  svg {
-    height: 32px;
-    width: 32px;
-  }
+
   &:focus,
   &:active {
     transform: scale(0.9) !important;
+  }
+  &:hover {
+    color: var(--color-primary-bright);
   }
 }
 
