--- a/src/scss/base/_body.scss
+++ b/src/scss/base/_body.scss
@@ -91,6 +91,7 @@ body {
   --color-full-screen: rgba(0, 0, 0, 0.7);
   --color-background-selected: #{rgba($primary, 0.1)};
   --color-translucent: rgba(255, 255, 255, 0.89);
+  --color-translucent-1: rgba(255, 255, 255, 0.1);
   --color-translucent-inverse: rgba(0, 0, 0, 0.79);
 
   --input-background: #eee;
@@ -192,6 +193,7 @@ body.test {
   --input-focus-background: #000;
 
   --color-translucent: rgba(0, 0, 0, 0.79);
+  --color-translucent-1: rgba(0, 0, 0, 0.4);
   --color-translucent-inverse: rgba(255, 255, 255, 0.79);
 
   .btn-light {
