--- a/public/main.css
+++ b/public/main.css
@@ -5128,6 +5128,9 @@ button:focus {
   padding: 3px;
   border-radius: 12px;
   height: 40px; }
+  .btn-group.compact .btn {
+    padding-left: 7px !important;
+    padding-right: 7px !important; }
   .btn-group .btn {
     background: transparent !important;
     border: none;
@@ -6770,6 +6773,7 @@ body.scrolling .n-tracker-button {
       fill: var(--color-primary-bright); }
 
 .n-grid {
+  width: 100%;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -7129,7 +7133,9 @@ aside.n-panel {
   background-color: var(--color-primary);
   color: #000;
   font-size: 11px;
-  border: var(--color-primary); }
+  border: var(--color-primary);
+  display: flex;
+  align-items: center; }
   .badge.badge-lg {
     font-size: 1rem;
     height: 2rem;
