--- a/src/scss/components/_badge.scss
+++ b/src/scss/components/_badge.scss
@@ -7,6 +7,8 @@
   color: #000;
   font-size: 11px;
   border: var(--color-primary);
+  display: flex;
+  align-items: center;
 
   &.badge-lg {
     font-size: 1rem;
