--- a/public/main.css
+++ b/public/main.css
@@ -4940,10 +4940,11 @@ button:focus {
     margin-right: 4px; }
 
 .btn-sm, .btn-group-sm > .btn {
-  border-radius: 6pt !important; }
+  border-radius: 6pt !important;
+  font-size: small; }
 
 .btn-xs {
-  font-size: 0.65rem !important;
+  font-size: x-small;
   padding: 2px 10px;
   text-transform: uppercase;
   font-weight: bold; }
@@ -5110,16 +5111,15 @@ button:focus {
     font-size: 2.5rem; }
 
 .btn.btn-text {
-  color: var(--color-primary);
+  color: var(--color-primary-bright);
   background-color: transparent;
   box-shadow: none;
-  font-size: medium;
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 0.06rem; }
   .btn.btn-text:active {
     background-color: transparent !important;
-    color: var(--color-primary) !important;
+    color: var(--color-primary-bright);
     opacity: 0.86; }
 
 .btn-group {
@@ -6821,7 +6821,11 @@ aside.n-panel {
     border-left: solid 1px rgba(0, 0, 0, 0.1); }
   .n-panel.border-top {
     border-top: solid 1px rgba(0, 0, 0, 0.1); }
-  .n-panel.n-panel-fixed {
+  .n-panel.stiff, .n-panel.n-panel-stiff {
+    flex-grow: 0;
+    height: auto;
+    flex-shrink: 0; }
+  .n-panel.n-panel-fixed, .n-panel.fixed {
     position: absolute;
     top: 0;
     bottom: 0;
