--- a/src/scss/components/_app-panel.scss
+++ b/src/scss/components/_app-panel.scss
@@ -39,7 +39,15 @@ aside.n-panel {
     border-top: solid 1px rgba(0, 0, 0, 0.1);
   }
 
-  &.n-panel-fixed {
+  &.stiff,
+  &.n-panel-stiff {
+    flex-grow: 0;
+    height: auto;
+    flex-shrink: 0;
+  }
+
+  &.n-panel-fixed,
+  &.fixed {
     position: absolute;
     top: 0;
     bottom: 0;
